--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,11 @@
   "manifest_version": 3,
   "action": {
     "default_icon": "hello_extensions.png"
-  }, "background": {"service_worker": "background.js"}
+  }, "background": {"service_worker": "background.js"},
+  "chrome_url_overrides" : {
+    "newtab": "defaultPage.html"
+  },
+  "permissions": [
+    "geolocation"
+  ]
 }
